mdapipkg/objects/Contact_Skill_Option__c.object
<CustomObject>
    <description>(master detail relationship to the Contact Skill object) holds the values that members can pick from</description>
    <fields>
        <fullName>Active_Contact_Skill_Option__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Contact_Skill_Option__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theme_Contact_Skill_Option__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Community &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Hobbies</fullName>
                </value>
                <value>
                    <fullName>Industries</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parenting</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>Personal Growth</fullName>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Category_Contact_Skill_Option__c</fullName>
        <label>Sub Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Category Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Theme_Contact_Skill_Option__c</fullName>
        <label>Theme</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Personal_Family</fullName>
                    <label>Personal &amp; Family</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Skill Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theme_Contact_Skill_Option__c</columns>
        <columns>Active_Contact_Skill_Option__c</columns>
        <columns>Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllAct</fullName>
        <columns>NAME</columns>
        <columns>Theme_Contact_Skill_Option__c</columns>
        <columns>Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Priority__c</columns>
        <columns>Active_Contact_Skill_Option__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Active</label>
    </listViews>
    <listViews>
        <fullName>BusAct</fullName>
        <columns>NAME</columns>
        <columns>Theme_Contact_Skill_Option__c</columns>
        <columns>Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Priority__c</columns>
        <columns>Active_Contact_Skill_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Contact_Skill_Option__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <label>Business - Active</label>
    </listViews>
    <listViews>
        <fullName>PFAct</fullName>
        <columns>NAME</columns>
        <columns>Theme_Contact_Skill_Option__c</columns>
        <columns>Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Contact_Skill_Option__c</columns>
        <columns>Sub_Category_Priority__c</columns>
        <columns>Active_Contact_Skill_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Contact_Skill_Option__c</field>
            <operation>equals</operation>
            <value>Personal_Family</value>
        </filters>
        <label>Personal and Family - Active</label>
    </listViews>
    <nameField>
        <displayFormat>CSO-{00000}</displayFormat>
        <label>Contact Skill Option ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Skill Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>